only remove the namespace if it's actually ours.